calamares-settings-solydxk (11.1.0) unstable; urgency=low

  * Fix bug: "All key slots full"
  * Keep asking for passphrase until fstype can be determined or user cancel

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 13 Apr 2022 14:33:26 +0200

calamares-settings-solydxk (11.0.31) unstable; urgency=low

  * luksboot-fix: rewrite get_fstype function to fix "all key slots full"

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 13 Apr 2022 11:52:37 +0200

calamares-settings-solydxk (11.0.30) unstable; urgency=low

  * Rename luks-ubootfix to luksboot-fix
  * luksboot-fix: add custom error dialog
  * luksboot-fix: ask for passphrase for previously encrypted partitions
  * luksboot-fix: make it translatable

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 06 Apr 2022 10:58:36 +0200

calamares-settings-solydxk (11.0.29) unstable; urgency=low

  * Add error handling to luks-ubootfix
  * Replace sed command with python regexp
  * Make luks-ubootfix more readable

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 05 Apr 2022 09:54:57 +0200

calamares-settings-solydxk (11.0.28) unstable; urgency=low

  * Remove luksopenswaphookcfg from settings.conf

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 04 Apr 2022 10:10:37 +0200

calamares-settings-solydxk (11.0.27) unstable; urgency=high

  * Add module to fix system when using unencrypted /boot and encrypted /
  * Skip localizing packages when lang = en_US

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 02 Apr 2022 19:25:06 +0200

calamares-settings-solydxk (11.0.26) unstable; urgency=low

  * Move luksbootkeyfile and plymouthcfg up in settings.conf

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 31 Mar 2022 15:05:58 +0200

calamares-settings-solydxk (11.0.25) unstable; urgency=low

  * Fix ssd-config not adding to fstab

 -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 18 Jan 2022 12:59:01 +0100

calamares-settings-solydxk (11.0.24) unstable; urgency=low

  * Updated translation: tr
